# nugrad

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: main.rs  nn.rs  value.rs  viz.rs
src/nugrad/: __init__.py  nn.py  value.py  viz.py
tests/: test_nugrad.py
