[project]
name = "nugrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
]

[tool.pdm.scripts]
test = "pytest"
